# samp-mobile

./: .gitignore  CLAUDE.md  build.gradle  settings.gradle
app/: aurora.jks  build.gradle  (+2 more)
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/multiplayer/: CMakeLists.txt  StackTrace.h  audiostream.cpp  audiostream.h  aurora.h  log.cpp  log.h  main.cpp  main.h  playertags.cpp  playertags.h  settings.cpp  settings.h
app/src/main/cpp/multiplayer/game/: CFirstPersonCamera.cpp  CPlayerInfoGta.h  CRenderTarget.cpp  CRenderTarget.h  Camera.h  CrossHair.h  ES2VertexBuffer.cpp  ES2VertexBuffer.h  MemoryMgr.cpp  MemoryMgr.h  PedIntelligence.cpp  PedIntelligence.h  PlayerPedData.h  Pools.cpp  Pools.h  RGB.h  RQ_Commands.cpp  Renderer.h  Streaming.cpp  Streaming.h  StreamingInfo.cpp  TimeCycle.h  World.cpp  World.h  actor.cpp  common.h  game.cpp  game.h  hooks.cpp  object.cpp  pad.cpp  patches.cpp  playerped.cpp  playerped.h  snapshothelper.cpp  sprite2d.cpp  sprite2d.h  util.cpp  util.h  vehicle.cpp  (+1 more)
app/src/main/cpp/multiplayer/game/Collision/: ColTrianglePlane.cpp
app/src/main/cpp/multiplayer/gui/: gui.cpp  gui.h  imguirenderer.cpp  imguirenderer.h  imguiwrapper.cpp  uisettings.cpp  uisettings.h
app/src/main/cpp/multiplayer/java/: editobject.cpp  jniutil.cpp  jniutil.h
app/src/main/cpp/multiplayer/net/: localplayer.cpp  netgame.cpp  netgame.h  netrpc.cpp  playerpool.cpp  playerpool.h  remoteplayer.cpp  scriptrpc.cpp  textdrawpool.cpp
app/src/main/cpp/multiplayer/voice_new/: Channel.cpp  Playback.cpp  Plugin.cpp  Record.cpp  Record.h  StreamAtPlayer.cpp
(+184 files in other folders)
